<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CheckoutActivity">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:background="#99F8F8F6">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="Payment:"
            android:textAlignment="center"
            android:textSize="40dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="Sign In"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="#5565350f"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="Register"
            android:textSize="20dp"
            android:backgroundTint="#5565350f"
            android:textColor="@color/white"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>