<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.UserAccountFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/userInfoBox">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/infoContainer"
            android:layout_width="511dp"
            android:layout_height="227dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:background="#55ffffff"
            android:text="Info"
            android:textColor="#363C45"
            android:textSize="23dp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/cartButton"
            android:layout_width="262dp"
            android:layout_height="114dp"
            android:layout_gravity="top|start"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="My cart"
            android:textColor="#363C45"
            android:textSize="20dp" />

        <Button
            android:id="@+id/redeemCardButton"
            android:layout_width="284dp"
            android:layout_height="117dp"
            android:layout_gravity="top|end"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="Gift card"
            android:textColor="#363C45"
            android:textSize="20dp" />

        <Button
            android:id="@+id/addCardButton"
            android:layout_width="277dp"
            android:layout_height="116dp"
            android:layout_gravity="center|start"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="Add Credit Card"
            android:textColor="#363C45"
            android:textSize="20dp" />

        <Button
            android:id="@+id/addAddressButton"
            android:layout_width="267dp"
            android:layout_height="116dp"
            android:layout_gravity="center|end"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="Add address"
            android:textColor="#363C45"
            android:textSize="20dp" />

        <Button
            android:id="@+id/membershipButton"
            android:layout_width="279dp"
            android:layout_height="124dp"
            android:layout_gravity="bottom|left"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="BUY MEMBERSHIP"
            android:textColor="#363C45"
            android:textSize="20dp" />


        <Button
            android:id="@+id/logoutButton"
            android:layout_width="265dp"
            android:layout_height="124dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="Logout"
            android:textColor="#363C45"
            android:textSize="20dp" />
    </FrameLayout>



</LinearLayout>
