...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:background="@drawable/searchview_rounded_background"
            android:iconifiedByDefault="false"
            android:layoutDirection="ltr"
            android:layout_marginRight="16dp"
...
            app:maxImageSize="35dp" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchLayout" />

</RelativeLayout>
