...
                            android:minWidth="50dp"
                            android:minHeight="50dp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/Submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/teal_200"
                        android:textColor="#363C45" />
                </LinearLayout>
...
