...
                android:layout_margin="@dimen/cardview_default_radius"
                android:src="@drawable/baseline_comment_56"
                app:fabSize="normal"
                app:maxImageSize="35dp" />

            <Button
                android:id="@+id/ViewCartButtonXML"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#363C45"
                android:backgroundTint="@color/teal_200"
                android:layout_gravity="bottom"
                android:text="View Cart" />
...
