<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/confirmationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Type &quot;Yes&quot; or &quot;No&quot;"
        android:inputType="text"
        android:maxLength="20" />

</RelativeLayout>