...
            android:text="Tax"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/toPaymentButton"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:background="@drawable/searchview_rounded_background"
            android:text="Continue"
            android:textSize="12dp" />
...

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:checkedButton="@id/deliveryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickupButton"
...
